# easy-translation

./: .gitignore  README.md  package.json
dict/: readme.md
docs/plans/: word-analysis-plan.md
docs/sql/: dict.sql
src/: App.vue
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: dict.rs  mod.rs  translate.rs
src-tauri/src/language_detect/: detector.rs
src-tauri/src/translator/: baidu.rs  deepl.rs  google.rs  mock.rs  mod.rs
src/assets/: theme.css
src/components/: TranslationResults.vue  WordInfo.vue
src/composables/: useDebounce.ts  useTheme.ts  useTranslation.ts  useWindowManager.ts  useWordAnalysis.ts
